Footer: logo minuscule, chgt épaisseur, icônes même largeur

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         <footer>
 
-            <h2 class="logo__ohmyfood">Ohmyfood</h2>
+            <h2 class="logo__ohmyfood">ohmyfood</h2>
      
             <nav>
                 <ul class="menu__nav">
@@ -186,7 +186,7 @@
 
                     <li class="menu__nav__option">
                         <a class="menu__nav__link" href="#">
-                            <i class="far fa-handshake menu__nav__icon"></i>Devenir partenaire
+                            <i class="fas fa-hands-helping menu__nav__icon"></i>Devenir partenaire
                         </a>
                     </li>
 
