--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -198,7 +198,7 @@
 
         <footer>
 
-            <h2 class="logo__ohmyfood">Ohmyfood</h2>
+            <h2 class="logo__ohmyfood">ohmyfood</h2>
      
             <nav>
                 <ul class="menu__nav">
@@ -210,7 +210,7 @@
 
                     <li class="menu__nav__option">
                         <a class="menu__nav__link" href="#">
-                            <i class="far fa-handshake menu__nav__icon"></i>Devenir partenaire
+                            <i class="fas fa-hands-helping menu__nav__icon"></i>Devenir partenaire
                         </a>
                     </li>
 
